Handle closing of multibuffers

BUG: 137179